--- a/AntiqueBookstore/appsettings.json
+++ b/AntiqueBookstore/appsettings.json
@@ -1,13 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AntiqueBookstore-91fc14b7-f058-46ee-b89e-ac8de46518b3;Trusted_Connection=True;MultipleActiveResultSets=true" /**,
-    "DefaultConnection": ""Server=localhost;Database=AntiqueBookstore;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;MultipleActiveResultSets=true;"**/
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AntiqueBookstore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=localhost;Database=AntiqueBookstore;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information", // Critical, Error, Warning, Information, Debug, Trace
-      "Microsoft": "Information"
-      //"Microsoft.AspNetCore": "Debug"
+      "Microsoft.AspNetCore": "Warning"
       //"Microsoft.EntityFrameworkCore": "Debug"
       //"Microsoft.EntityFrameworkCore.Database.Command": "Debug"
     }
