--- a/AntiqueBookstore.Domain.Tests/AntiqueBookstore.Domain.Tests.csproj
+++ b/AntiqueBookstore.Domain.Tests/AntiqueBookstore.Domain.Tests.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AntiqueBookstore\AntiqueBookstore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
