Feature: added UI localization Culture cookie switcher

--- a/AntiqueBookstore/appsettings.json
+++ b/AntiqueBookstore/appsettings.json
@@ -5,10 +5,10 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information", // Critical, Error, Warning, Information, Debug, Trace
-      "Microsoft.AspNetCore": "Warning"
-      //"Microsoft.EntityFrameworkCore": "Debug"
-      //"Microsoft.EntityFrameworkCore.Database.Command": "Debug"
+      "Default": "Debug", // Critical, Error, Warning, Information, Debug, Trace
+      "Microsoft.AspNetCore": "Debug",
+      "Microsoft.EntityFrameworkCore": "Debug",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Debug"
     }
   },
   "AllowedHosts": "*"
